updated personal info

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             <h2>About Me</h2>
 
-            <p id="p">I am a 21 year old student, studying Electrical Engineering at the University of Waterloo in Canada. Previous to university, I had initially started programming during high school, allowing me to be exposed to scripting languages and implementing basic functional programs. When I had reached university, I then began to learn object-oriented programming throughout my curriculum and grew an interest in pursuing a job to apply my growing knowledge. With personal projects and work experience, I have found that my love for software has continued to grow at an order of O(n<sup>3</sup>) and refused to stop.</p>
+            <p id="p">I am a 22 year old, soon to be graduate of Electrical Engineering at the University of Waterloo in Canada. Previous to university, I had initially started programming during high school, allowing me to be exposed to scripting languages and implementing basic functional programs. When I had reached university, I then began to learn object-oriented programming throughout my curriculum and grew an interest in pursuing a job to apply my growing knowledge. With personal projects and work experience, I have found that my love for software has continued to grow at an order of O(n<sup>3</sup>) and refused to stop.</p>
             <p id="p">
             Continously learning new technologies is difficult as I want to pursue my Electrical Engineering degree, but also require growing knowledge of software to pursue my career interests. Much of my software knowledge today is therefore self-taught through projects or my past experiences and I continue to learn this way.
             </p>
@@ -188,6 +188,36 @@
          </div>
 
          <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3><a class="company" href="http://ca.blackberry.com/home.html">Blackberry Ltd.</a></h3>
+                  <p class="info">Software Engineer </p>
+                  <p class="date">September - December 2016</p>
+                  <p id="place"> Waterloo, Ontario </p>
+                  <p id="p">
+                  Over the 4 months spent at Blackberry, I was placed on the Big Data team in charge of growth and upkeep of all servers in their data centers. Using tools such as Chef, I was asked to produce a health check system that would run on all data nodes within their Hadoop cluster on boot-up. By doing so, when the hosts would PXE boot, the health check would run, giving information to dev-ops on the status of all servers. Secondly, I had built out an automation workflow to replace the manual approval and creation of user accounts within the cluster. This reduced approximately 5 man hours, and removed the input of multiple people throughout the process.  
+                  </p>
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3><a class="company" href="http://www.amplify.com/">Amplify Education</a></h3>
+                  <p class="info">Software Engineer </p>
+                  <p class="date">January - April 2016</p>
+                  <p id="place"> New York City, New York </p>
+                  <p id="p">
+                  As a returning intern to Amplify, I was placed on the reporting web-app team. During this time, Amplify was deprecating old applications due to licensing requirements for users, and my initial project was to deprecate and replace a book-management system. This project was completely done using Java, where I had implemented the back-end logic of the application, and created API's to help communicate and format data to and from the back-end. Other projects I worked on included creating a JSON serialization and deserialization library as well as a plug-in framework to assist with instantiating dynamic applications as required, rather than all static applications booting up simultaneously.
+                  </p>
+               </div>
+
+            </div> <!-- item end -->
 
             <div class="row item">
 
@@ -278,305 +308,6 @@
       </div> <!-- End skills -->
 
    </section> <!-- Resume Section End-->
-
-
-   <!-- Portfolio Section
-   ================================================== -->
-<!-- <!-- <!-- <!-- <!-- <!-- <!-- <!-- <!-- <!--    <section id="portfolio">
-
-      <div class="row">
-
-         <div class="twelve columns collapsed">
-
-            <h1>Check Out Some of My Works.</h1>
-
-            <!-- portfolio-wrapper -->
- <!--           <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/coffee.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Coffee</h5>
-                              <p>Illustrration</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/console.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Console</h5>
-                              <p>Web Development</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/judah.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Judah</h5>
-                              <p>Webdesign</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-<!--
-                     <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/into-the-light.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Into The Light</h5>
-                              <p>Photography</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-05" title="">
-                        <img alt="" src="images/portfolio/farmerboy.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Farmer Boy</h5>
-                              <p>Branding</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-06" title="">
-                        <img alt="" src="images/portfolio/girl.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Girl</h5>
-                              <p>Photography</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-07" title="">
-                        <img alt="" src="images/portfolio/origami.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Origami</h5>
-                              <p>Illustrration</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div> <!-- item end -->
-<!--
-               <div class="columns portfolio-item">
-                  <div class="item-wrap">
-
-                     <a href="#modal-08" title="">
-                        <img alt="" src="images/portfolio/retrocam.jpg">
-                        <div class="overlay">
-                           <div class="portfolio-item-meta">
-                              <h5>Retrocam</h5>
-                              <p>Web Development</p>
-                           </div>
-                        </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
-                     </a>
-
-                  </div>
-               </div>  <!-- item end -->
-<!--
-            </div> <!-- portfolio-wrapper end -->
-<!--
-         </div> <!-- twelve columns end -->
-
-
-         <!-- Modal Popup
-         --------------------------------------------------------------- -->
-<!--
-         <div id="modal-01" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Coffee Cup</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-01 End -->
-<!--
-         <div id="modal-02" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Console</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-02 End -->
-<!--
-         <div id="modal-03" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Judah</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-03 End -->
-<!--
-         <div id="modal-04" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Into the Light</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-04 End -->
-<!--
-         <div id="modal-05" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-farmerboy.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Farmer Boy</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-05 End -->
-<!--
-         <div id="modal-06" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-girl.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Girl</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-06 End -->
-<!--
-         <div id="modal-07" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-origami.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Origami</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Illustration</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-07 End -->
-
-<!--          <div id="modal-08" class="popup-modal mfp-hide">
-
-            <img class="scale-with-grid" src="images/portfolio/modals/m-retrocam.jpg" alt="" />
-
-            <div class="description-box">
-               <h4>Retrocam</h4>
-               <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Webdesign, Photography</span>
-            </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-               <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-         </div><!-- modal-01 End -->
-
-
-  <!--    </div> <!-- row End -->
-
- <!--  </section> <!-- Portfolio Section End-->
 
    <!-- Testimonials Section
    ================================================== -->
