--- a/list.html
+++ b/list.html
@@ -26,8 +26,8 @@
                        <li><strong>ECE 140 Linear Circuits</strong></li>
                        <li><strong>ECE 150 Fundamentals of Programming</strong></li>
                        <li><strong>CHE 102 Chemistry for Engineers</strong></li>
-                       <li><strong>Math 117 Calculus 1 for Engineering</strong></li>
-                       <li><strong>Math 119 Calculus 2 for Engineering</strong></li>
+                       <li><strong>MATH 117 Calculus 1 for Engineering</strong></li>
+                       <li><strong>MATH 119 Calculus 2 for Engineering</strong></li>
                      </ul>
                      </div>
 
@@ -50,11 +50,31 @@
                      <div data-role="collapsible">
                      <h4>Third Year</h4>
                      <ul data-role="listview">
+                       <li><strong>ECE 224 Embedded Microprocessor Systems</strong></li>
                        <li><strong>ECE 316 Probability Theory and Statistics</strong></li>
-                       <li><strong>ECE 380 Analog Control Systems</strong></li>
+                       <li><strong>ECE 318 Analog & Digital Communications</strong></li>
                        <li><strong>ECE 331 Electronic Devices</strong></li>
+                       <li><strong>ECE 361 Power Systems & Components</strong></li>
                        <li><strong>ECE 375 Electromagnetic Fields and Waves</strong></li>
+                       <li><strong>ECE 380 Analog Control Systems</strong></li>
+                       <li><strong>ECE 390 Engineering Design, Economics, & Impact on Society</strong></li>
                        <li><strong>PSYCH 101 Introductory Psychology</strong></li>
+                       <li><strong>MUSIC 140 Popular Music & Culture</strong></li>
+                     </ul>
+                     </div>
+
+                     <div data-role="collapsible">
+                     <h4>Fourth Year</h4>
+                     <ul data-role="listview">
+                       <li><strong>ECE 406 Algorithm Design & Analysis</strong></li>
+                       <li><strong>ECE 457A Cooperative and Adaptive Algorithms</strong></li>
+                       <li><strong>ECE 462 Electrical Distribution Systems</strong></li>
+                       <li><strong>ECE 498A Engineering Design Project</strong></li>
+                       <li><strong>MSCI 432 Production and Service Operations Management</strong></li>
+                       <li><strong>MSCI 444 Information Systems Analysis and Design</strong></li>
+                       <li><strong>SCI 238 Indroductory Astronomy</strong></li>
+                       <li><strong>ENVS 200 Field Ecology</strong></li>
+                       <li><strong>RS 121 Evil</strong></li>
                      </ul>
                      </div>
 
